[gd_scene load_steps=5 format=3 uid="uid://bf5d7b4ehbedl"]

[ext_resource type="Texture2D" uid="uid://qjvsuee4yhsf" path="res://addons/particlyst/icon/particlyst_ui_link_checked.svg" id="2_6jxrt"]
[ext_resource type="Script" path="res://addons/particlyst/inspector/modifier/parameter/particlyst_parameter_vector.gd" id="2_ew6c5"]
[ext_resource type="Texture2D" uid="uid://buo44vvld53ba" path="res://addons/particlyst/icon/particlyst_ui_revert.svg" id="2_nep4x"]
[ext_resource type="Texture2D" uid="uid://53ti2r5y5fgu" path="res://addons/particlyst/icon/particlyst_ui_link_unchecked.svg" id="3_3pmlw"]

[node name="ParameterVector" type="HBoxContainer"]
offset_right = 350.0
offset_bottom = 23.0
size_flags_horizontal = 3
mouse_filter = 2
script = ExtResource("2_ew6c5")

[node name="H" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="NameLabel" type="Label" parent="H"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Property name"

[node name="RevertButton" type="Button" parent="H"]
unique_name_in_owner = true
layout_mode = 2
icon = ExtResource("2_nep4x")
flat = true

[node name="H2" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0

[node name="VectorCo" type="HBoxContainer" parent="H2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="LinkButton" type="CheckBox" parent="H2"]
unique_name_in_owner = true
layout_mode = 2
theme_override_icons/checked = ExtResource("2_6jxrt")
theme_override_icons/unchecked = ExtResource("3_3pmlw")
button_pressed = true

[connection signal="toggled" from="H2/LinkButton" to="." method="_on_link_button_toggled"]
